--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,12 @@ dependencies:
   bloc: ^9.0.0
   google_fonts: ^6.2.1
   get_it: ^8.0.3
+  firebase_core: ^3.11.0
+  firebase_auth: ^5.4.2
+  cloud_firestore: ^5.6.3
+  path: ^1.9.0
+  path_provider: ^2.1.5
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
