--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.5
   equatable: ^2.0.7
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
