--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.1.5
   equatable: ^2.0.7
   dartz: ^0.10.1
+  go_router: ^14.8.0
 
 dev_dependencies:
   flutter_test:
