--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   dartz: ^0.10.1
   go_router: ^14.8.0
   intl: ^0.20.2
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
