--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     must_be_immutable: ignore
+    type_literal_in_constant_pattern: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
