--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   go_router: ^14.8.0
   intl: ^0.20.2
   flutter_colorpicker: ^1.1.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
