--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   bloc: ^9.0.0
   google_fonts: ^6.2.1
   get_it: ^8.0.3
-  firebase_core: ^3.11.0
+  firebase_core: ^3.12.1
   firebase_auth: ^5.4.2
   cloud_firestore: ^5.6.3
   path: ^1.9.0
@@ -30,6 +30,7 @@ dependencies:
   intl: ^0.20.2
   flutter_colorpicker: ^1.1.0
   mocktail: ^1.0.4
+  firebase_messaging: ^15.2.4
 
 dev_dependencies:
   flutter_test:
