--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   mocktail: ^1.0.4
   firebase_messaging: ^15.2.4
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
