--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   mocktail: ^1.0.4
   firebase_messaging: ^15.2.4
   http: ^1.3.0
+  internet_connection_checker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
