--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_local_notifications: ^19.0.0
   workmanager: ^0.5.2
   flutter_svg: ^2.0.17
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
