designa nd implement the analysis page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   workmanager: ^0.5.2
   flutter_svg: ^2.0.17
   font_awesome_flutter: ^10.8.0
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
